# tao

./: .coderabbit.yaml  .envrc  .gitattributes  .gitignore  .greptile.yaml  .mise.toml  .oxfmtrc.json  .oxlintrc.json  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Justfile  LICENSE  PLAN.md  README.md  ZIG_DAEMON_CODE_REVIEW.md  biome.json  electron.vite.config.ts  flake.nix  greptile.json  package.json  plans.md  pnpm-lock.yaml  pnpm-workspace.yaml  report.md  rework.md  tsconfig.json  tsconfig.node.json  tsconfig.scripts.json  tsconfig.web.json
.codex/environments/: environment.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml
.github/workflows/: ci.yml  memory-tools.yml  performance-long.yml  review-gates.yml
.superset/: config.json
apps/cli/: Cargo.toml
apps/daemon/: build.zig  build.zig.zon  package.json
apps/desktop/: electron.vite.config.ts  package.json  tsconfig.node.json  tsconfig.web.json
assets/: README.md
bench/: baseline-canvas2d.txt  benchmark.ts  cross-terminal.sh  ipc-benchmark.mjs  latency-tau.ts  latency-xterm.ts  renderer-benchmark.ts  run-all.sh  startup-bench.sh
crates/tao-bridge/: Cargo.toml
docs/: README.md  WEBGL_RENDERER_PLAN.md  ZIG_WEBGL_IMPLEMENTATION_PLAN.md
docs/plans/: cli.md  installer-channels.md  persistence.md  workspace-worktree-workflow.md
patches/: README.md
scripts/: README.md  electron-install.ts  fix-electron-install.mjs  fix-node-pty-perms.mjs  package-smoke.ts  taod-zig.mjs  taod.ts  taud.ts  zig-tools.mjs  zig-tools.ts
src/main/: index.ts  pty.ts  (+3 more)
(+152 files in other folders)
