[workspace]
resolver = "3"
members = ["apps/cli", "crates/tao-bridge"]

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
crossterm = "0.28"
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tao-bridge = { path = "crates/tao-bridge" }
